tests/ValidProofs/conjE1.fitch
|P(x) ∧ P(y)
|---
|P(x) (∧E1) 1