tests/InvalidRules/forallE%2.fitch
|∀x.P(x) ∧ Q(y)
|---
|P(c) ∧ Q(c) (∀E) 1
